<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.app.creativetask.R" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/screenName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text=" emad mohamed oun"
            android:gravity="center"
            android:textColor="@color/selected_tab_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@null"
            android:src="@drawable/type_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screenName" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="start"
            android:text="@string/need_car_txt"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_iv"
            app:layout_constraintTop_toTopOf="@+id/icon_iv" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/my_list_help_accepted_time"
            android:drawablePadding="5dp"
            android:text="@string/time_txt"
            android:textColor="@color/order_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/icon_iv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/gender_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/my_list_help_accepted_info_attendance"
            android:drawablePadding="5dp"
            android:text="@string/time_txt"
            android:textColor="@color/order_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/time_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/my_list_help_accepted_info_attendance"
            android:drawablePadding="5dp"
            android:text="@string/type_txt"
            android:layout_marginEnd="5dp"
            android:textColor="@color/order_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/gender_type_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/my_list_help_accepted_accept"
            android:drawablePadding="5dp"
            android:text="@string/count_txt"
            android:layout_marginEnd="5dp"
            android:textColor="@color/order_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/type_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/cancel_txt"
            android:textAllCaps="false"
            android:textColor="@color/selected_tab_color"
            android:textSize="13.5sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@+id/title_tv"
            app:layout_constraintTop_toBottomOf="@+id/time_tv" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>